Add basic HTML structure to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-cus
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+  <meta charset="utf-8">
+  <title>Petr Vrána</title>
+</head>
+<body>
+  <h1 style="text-align: center;">
+    <a href="https://youtube.com">ble</a>
+  </h1>
+</body>
+</html>
